KeyArchive now works. no login password yet. Need to add sharing, key delete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".KeyArchive"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".KeyArchive">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
