--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'net.zetetic:android-database-sqlcipher:3.5.4@aar'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
     testCompile 'junit:junit:4.12'
 }
